# reddit-sentiment-analysis

./: .env.example  .gitignore  APIReddit.py  ARCHITECTURE.md  README.md  TESTE_CEGO.csv  pyproject.toml  requirements-dev.txt  requirements.txt
.backup/: conectivos_extras_final.csv  gerador_de_nuvem_de_palavras_e_dataset  top20.txt  xslx_para_csv
script/: README.md  convert.md  convert.py  reddit.md  reddit.py  view.md  view.py
src/sa/: README.md  __init__.py
src/sa/analysis/: __init__.py  post.py  text.py
src/sa/client/: README.md  __init__.py  reddit.py
src/sa/collector/: README.md  __init__.py  reddit.py
src/sa/common/: README.md  __init__.py  file.py  storage.py
src/sa/file/: README.md  __init__.py  conveter.py  csv.py  xlsx.py
src/sa/logger/: README.md  __init__.py  reddit.py  utils.py
src/sa/model/: README.md  __init__.py  language.py  polarity.py  post.py
src/sa/nlp/: README.md  __init__.py  language.py  stopwords.py
src/sa/parser/: README.md  __init__.py  converter.py  reddit.py  view.py
src/sa/storage/: __init__.py  csv.py  excel.py  xlsx.py
src/sa/visualization/: README.md  __init__.py  frequency.py  wordcloud.py
