[project]
name = "sa"
version = "1.0.0"
description = "Biblioteca para coleta e análise de sentimentos em posts do Reddit"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "sentiment-analysis",
    "natural-language-processing",
    "machine-learning",
    "deep-learning",
    "text-mining",
    "text-classification",
    "social-media-analysis",
    "transformer-models",
    "word-embeddings",
    "bag-of-words",
    "data-preprocessing",
    "model-evaluation",
    "computational-linguistics",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "praw",
    "pandas",
    "emoji",
    "langdetect",
    "python-dotenv",
    "openpyxl",
    "wordcloud",
    "spacy",
    "nltk",
    "unidecode",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.8",
    "mypy>=1.18.2",
    "black>=25.9.0",
    "isort>=6.1.0",
]

[tool.poetry]
packages = [{ include = "sa", from = "src" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
source-roots = ["src"]
max-line-length = 150
recursive = true
disable = [
    "broad-exception-caught",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "unused-argument",
    "duplicate-code"
]
ignore-paths = [".venv/", "build/", "tests/"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
exclude = [
    "import-untyped"
]
pretty = true
strict = true
disallow_any_expr = false
disallow_any_unimported = false
disallow_subclassing_any = false

[tool.black]
line-length = 150
target-version = ["py311"]
exclude = '''
/(
    \.git
| \.venv
| build
| dist
| migrations
| .venv
)/
'''

[tool.isort]
profile = "black"
line_length = 150

[tool.pytest.ini_options]
addopts = "-raqsv --strict-markers --tb=no"
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [".vscode", "__pycache__"]
markers = []